Import/Export fixes